--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
@@ -19,6 +20,8 @@
     "react-dom": "18.2.0",
     "react-parallax": "^3.5.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "recharts": "^2.7.3",
+    "slick-carousel": "^1.8.1",
+    "smooth-scrollbar-react": "^2.4.1"
   }
 }
