--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-parallax": "^3.5.1",
+    "react-scroll-parallax": "^3.4.2",
     "react-slick": "^0.29.0",
     "recharts": "^2.7.3",
     "slick-carousel": "^1.8.1",
-    "smooth-scrollbar-react": "^2.4.1"
+    "smooth-scrollbar": "^8.8.4"
   }
 }
