15 Nov new updation

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-parallax": "^3.5.1",
+    "react-responsive-modal": "^6.4.2",
     "react-scroll-parallax": "^3.4.2",
     "react-slick": "^0.29.0",
-    "recharts": "^2.7.3",
+    "recharts": "^2.9.2",
     "slick-carousel": "^1.8.1",
     "smooth-scrollbar": "^8.8.4"
   }
