--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-iframe": "^1.8.5",
     "react-parallax": "^3.5.1",
     "react-responsive-modal": "^6.4.2",
     "react-scroll-parallax": "^3.4.2",
