--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
-    "next": "13.4.10",
+    "next": "^15.1.5",
     "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
